retrieveUnpackaged/objects/BattleStationM__c.object
<CustomObject>
    <description>First test to the application on Salesforce</description>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rec_Date__c</fullName>
        <label>Received Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>BattleStationM</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BattleStationMName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BattleStationsM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>